3-CKA/7-Networking/7-Ingress/2-EKS-Ingress/4-Ingress/4-Ingress_Group/app3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app3-ingress
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: app-ingress-lb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}, {"HTTP":80}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-west-1:479465295367:certificate/bb680cfc-8bff-4ee4-8a75-adbde85c8dd5
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/group.name: "shanana-group"
    alb.ingress.kubernetes.io/group.order: '30'  # Priority order

spec:
  ingressClassName: alb
  rules:
    - host: shananatestingdevops.xyz
      http:
        paths:
          - path: /service13
            pathType: Prefix
            backend:
              service:
                name: service13-svc
                port:
                  number: 80
          - path: /service14
            pathType: Prefix
            backend:
              service:
                name: service14-svc
                port:
                  number: 80
          - path: /service15
            pathType: Prefix
            backend:
              service:
                name: service15-svc
                port:
                  number: 80
          - path: /service16
            pathType: Prefix
            backend:
              service:
                name: service16-svc
                port:
                  number: 80
          - path: /service17
            pathType: Prefix
            backend:
              service:
                name: service17-svc
                port:
                  number: 80
          - path: /service18
            pathType: Prefix
            backend:
              service:
                name: service18-svc
                port:
                  number: 80
